--- a/main.html
+++ b/main.html
@@ -23,7 +23,7 @@
 </head>
 <body>
   <h1>Band List (Alphabetically Sorted)</h1>
-  <ul id="band"></ul>
+  <ul id="bands"></ul>
 
   <script src="script.js"></script>
 </body>
